<resources>
    <string name="app_name">Smart Techno</string>
    <string name="date">Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="number">Number</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="area_line">Area Line</string>
    <string name="service_type">Service Type</string>
    <string name="service_info">Service Info</string>
    <string name="assigned_to">Assigned to</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="billing">Billing</string>
    <string name="payment_status">Payment Status</string>
    <string name="write_remarks">Write Remarks</string>
    <string name="remarks">Remarks</string>
    <string name="image">Image</string>
    <string name="signature">Signature</string>
    <string name="image_path">Image Path</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="pending">Pending</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="id">Id</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="task_id">Task Id</string>
    <string name="add_task">Add Task</string>
    <string name="view_task">View Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
