<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/roundlayoutt"
    tools:context=".Pintent">
    <include layout="@layout/toolbr"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@drawable/roundlayoutt"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:columnCount="16"
                android:padding="20dp"
                android:background="@drawable/roundlayoutt"
                android:rowCount="16"
                android:layout_margin="8dp"
                >
                <TextView
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:layout_gravity="fill"
                    android:layout_row="0"
                    android:layout_columnSpan="8"
                    android:layout_column="0"
                    android:text="@string/task_id"
                    />

                <TextView
                    android:id="@+id/Tid"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_gravity="fill"
                    android:layout_column="8"
                    android:padding="3dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:layout_columnSpan="6"
                    android:text="@string/date"
                    android:layout_row="1"
                    android:layout_column="0"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/Tdate"
                    android:textSize="16sp"
                    android:layout_row="1"
                    android:layout_column="8"
                    android:layout_gravity="fill"
                    android:padding="3dp"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnSpan="6"
                    android:layout_gravity="fill"
                    android:padding="3dp"
                    android:text="@string/name"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/Tskname"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="8"
                    android:padding="3dp"
                    android:textSize="16sp" />


                <TextView
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_gravity="fill"
                    android:textSize="16sp"
                    android:text="@string/priority"
                    />
                <TextView
                    android:layout_row="4"
                    android:layout_column="8"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tprio"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_gravity="fill"
                    android:text="@string/assigned_to"
                    android:padding="3dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="5"
                    android:layout_column="8"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tassign"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_gravity="fill"
                    android:text="@string/number"
                    android:padding="3dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="6"
                    android:layout_column="8"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tnum"
                    />

                <TextView

                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:padding="3dp"
                    android:text="@string/service_type"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="7"
                    android:layout_column="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:maxEms="10"
                    android:textSize="16sp"
                    android:id="@+id/Tser"
                    />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="8"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_gravity="fill"
                    android:text="@string/service_info"
                    android:padding="3dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="8"
                    android:layout_column="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tinfo"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="10"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_gravity="fill"
                    android:text="@string/billing"
                    android:padding="3dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="10"
                    android:layout_column="8"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tbill"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:layout_gravity="fill"
                    android:text="@string/status"
                    android:padding="3dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_row="3"
                    android:layout_column="8"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tstat"
                    />

                <TextView
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:padding="3dp"
                    android:layout_gravity="fill"
                    android:textSize="16sp"

                    android:text="@string/payment_status"
                    />
                <TextView
                    android:layout_row="9"
                    android:layout_column="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tpay"
                    />
                <TextView
                    android:layout_row="11"
                    android:layout_column="0"
                    android:layout_columnSpan="8"
                    android:padding="3dp"
                    android:layout_gravity="fill"
                    android:textSize="16sp"
                    android:text="@string/area_line"
                    />
                <TextView
                    android:layout_row="11"
                    android:layout_column="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:id="@+id/Tar"
                    />
                <TextView
                    android:layout_row="12"
                    android:layout_column="0"
                    android:textSize="16sp"
                    android:layout_columnSpan="8"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_gravity="fill"
                    android:text="@string/address_line_1"
                    />
                <TextView
                    android:layout_row="12"
                    android:layout_column="8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/Tareal"
                    />


            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"

                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Tim"
                    android:layout_weight="1"
                    android:layout_gravity="start"
                    android:contentDescription="@string/image"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:contentDescription="@string/signature"
                    android:id="@+id/Tsig"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>