<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#FAFAFA"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundlayoutt"
        >

        <TextView
            android:id="@+id/comid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:layout_gravity="center"
            android:textAlignment="center"

            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/TaskCom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="30sp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="40dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/roundlayoutt"
        >

        <TextView
            android:id="@+id/Progid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/in_progress"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/TaskPro"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundlayoutt"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Pendid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pending"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/TaskPen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>